--- a/eFarmingPortal/efp_app/templates/all_products.html
+++ b/eFarmingPortal/efp_app/templates/all_products.html
@@ -14,7 +14,7 @@
                 <p>{{product.price}}</p>
             </div>
             <p><b>{{product.title}}</b></p>
-            <a href="#" class="text-center nav-link">View Details</a>
+            <a href="{% url 'product_details' pk=product.productID %}" class="text-center nav-link">View Details</a>
         </div>
         {%endfor%}
         {%else%}
