--- a/eFarmingPortal/efp_app/templates/index.html
+++ b/eFarmingPortal/efp_app/templates/index.html
@@ -2,5 +2,98 @@
 
 
 {%block content%}
-Home
+{% load static %}
+
+
+
+<!-- Add the Nivo Slider container -->
+<div class="slider-wrapper theme-default slider-area" id="home">
+    <div class="bend niceties preview-2">
+        <div id="slider" class="nivoSlider">
+            <img src="{% static 'img/plants3.jpg' %}" alt="slider 1"  title="#slider-direction-4">
+            <img src="{% static 'img/eggplant.jpg' %}" alt="slider 2"  title="#slider-direction-2">
+            <img src="{% static 'img/plants1.jpg' %}" alt="slider 3"  title="#slider-direction-3">
+            <!-- Add more slides as needed -->
+        </div>
+    
+        <!-- direction 1 -->
+        <div id="slider-direction-1" class="slider-direction slider-one">
+            <div class="container">
+            <div class="row">
+                <div class="col-md-12 col-sm-12 col-xs-12">
+                <div class="slider-content">
+                    <!-- layer 1 -->
+                    <div class="layer-1-1 hidden-xs wow slideInDown" data-wow-duration="2s" data-wow-delay=".2s">
+                    <h2 class="title1">Welcome to eFarming Portal!</h2>
+                    </div>
+                    <!-- layer 2 -->
+                    <div class="layer-1-2 wow slideInUp" data-wow-duration="2s" data-wow-delay=".1s">
+                    <h1 class="title2">Your one-stop destination for all your farming needs. </h1>
+                    </div>
+                    <!-- layer 3 -->
+                    <div class="layer-1-3 hidden-xs wow slideInUp" data-wow-duration="2s" data-wow-delay=".2s">
+                    <a class="ready-btn right-btn page-scroll" href="#services">See Services</a>
+                    <a class="ready-btn page-scroll" href="#about">Learn More</a>
+                    </div>
+                </div>
+                </div>
+            </div>
+            </div>
+        </div>
+
+        <!-- direction 2 -->
+        <div id="slider-direction-2" class="slider-direction slider-two">
+            <div class="container">
+            <div class="row">
+                <div class="col-md-12 col-sm-12 col-xs-12">
+                <div class="slider-content text-center">
+                    <!-- layer 1 -->
+                    <div class="layer-1-1 hidden-xs wow slideInUp" data-wow-duration="2s" data-wow-delay=".2s">
+                    <h2 class="title1">The farmers and consumers</h2>
+                    </div>
+                    <!-- layer 2 -->
+                    <div class="layer-1-2 wow slideInUp" data-wow-duration="2s" data-wow-delay=".1s">
+                    <h1 class="title2"></h1>Explore a variety of categories, connect with farmers, and discover quality products.</h1>
+                    </div>
+                    <!-- layer 3 -->
+                    <div class="layer-1-3 hidden-xs wow slideInUp" data-wow-duration="2s" data-wow-delay=".2s">
+                    <a class="ready-btn right-btn page-scroll" href="#services">See Services</a>
+                    <a class="ready-btn page-scroll" href="#about">Learn More</a>
+                    </div>
+                </div>
+                </div>
+            </div>
+            </div>
+        </div>
+
+        <!-- direction 3 -->
+        <div id="slider-direction-3" class="slider-direction slider-two">
+            <div class="container">
+            <div class="row">
+                <div class="col-md-12 col-sm-12 col-xs-12">
+                <div class="slider-content">
+                    <!-- layer 1 -->
+                    <div class="layer-1-1 hidden-xs wow slideInUp" data-wow-duration="2s" data-wow-delay=".2s">
+                    <h2 class="title1">The Best farming Information </h2>
+                    </div>
+                    <!-- layer 2 -->
+                    <div class="layer-1-2 wow slideInUp" data-wow-duration="2s" data-wow-delay=".1s">
+                    <h1 class="title2">Start your journey to sustainable farming with us!</h1>
+                    </div>
+                    <!-- layer 3 -->
+                    <div class="layer-1-3 hidden-xs wow slideInUp" data-wow-duration="2s" data-wow-delay=".2s">
+                    <a class="ready-btn right-btn page-scroll" href="#services">See Services</a>
+                    <a class="ready-btn page-scroll" href="#about">Learn More</a>
+                    </div>
+                </div>
+                </div>
+            </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<section id="hero">
+    <!-- ... Hero content ... -->
+</section>
 {%endblock%}
